--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
-Hello bwoy
+<!DOCTYPE html>
+<html lang='it'>
+<head>
+	<title>Homepage - Dott. Paolo Bari</title>
+	<meta class="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza" />
+    <meta name="author" content="Francesco Bari" />
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="icon" type="image/gif" href="images/icon.svg" />
+</head>
+
+<body>
+	<div class="navbar navbar--extended">
+		<nav class="nav__mobile"></nav>
+		<div class="container">
+			<div class="navbar__inner">
+				<a href="index.html" class="navbar__logo">Dott. Paolo Bari</a>
+				<nav class="navbar__menu">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="contatti.html">Contatti</a></li>
+						<li><a href="dottore.html">Dottore</a></li>
+						<li><a href="areamedica.html">Area Medica</a></li>
+						<li><a href="blog.html">Blog</a></li>
+					</ul>
+				</nav>
+				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
+			</div>
+		</div>
+	</div>
+	<!-- Hero unit -->
+	<div class="hero">
+		<div class="hero__overlay hero__overlay--gradient"></div>
+		<div class="hero__inner">
+			<div class="container">
+				<div class="hero__content">
+					<div class="hero__content__inner" id='navConverter'>
+						<h1 class="hero__title">Dott. Paolo Bari</h1>
+						<p class="hero__text">Il dott. Paolo Bari &#232; un otorinolaringoiatra della citt&#224; di Vicenza. Qui aggiungiamo un po' di testo giusto giusto per scrivere due righe introduttive. Lorem Ipsum e altre belle cose</p>
+						<a href="contatti.html" class="button button__accent">Dove trovarmi</a>
+						<a href="areamedica.html" class="button hero__button">Scopri di pi&#249;</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="hero__sub">
+		<span id="scrollToNext" class="scroll">
+			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
+		</span>
+	</div>
+	<!-- Steps -->
+	<div class="steps landing__section">
+		<div class="container">
+			<h2>Dove lavoro?</h2>
+			<p>Attualmente è possibile contattare i seguenti centri per prendere un appuntamento con il dottore</p>
+		</div>
+		<div class="container">
+			<div class="steps__inner">
+				<div class="step">
+					<div class="step__media">
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.8190929620982!2d11.398031750445544!3d45.614279331336206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f4ae8d5eedc3f%3A0xb8c5c1a3727c4547!2s36073%20Montepulgo%20VI!5e0!3m2!1sit!2sit!4v1619088481626!5m2!1sit!2sit" style="border:none;"></iframe> 
+        			</div>
+					<h4>Vicenza</h4>
+					<p class="step__text">Inserire informazioni base di Vicenza tipo indirizzo e numero di telefono</p>
+					<a href="contatti.html" class="button button__accent">Prenota ora</a>
+				</div>
+				<div class="step">
+					<div class="step__media">
+						 <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;">
+            			</iframe> 
+        			</div>
+					<h4>Bassano</h4>
+					<p class="step__text">AInserire informazioni base di Bassano tipo indirizzo e numero di telefono</p>
+					<a href="contatti.html" class="button button__accent">Prenota ora</a>
+				</div>
+				<div class="step">
+					<div class="step__media">
+						 <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;">
+            			</iframe> 
+        			</div>
+					<h4>Schio</h4>
+					<p class="step__text">Inserire informazioni base di Schio tipo indirizzo e numero di telefono</p>
+					<a href="contatti.html" class="button button__accent">Prenota ora</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Expanded sections -->
+	<div class="expanded landing__section">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__media">
+					<img src="./images/doctor.svg" class="expanded__image">
+				</div>
+				<div class="expanded__content">
+					<h2 class="expanded__title">Dott. Paolo Bari</h2>
+					<p class="expanded__text">Il Dott. Paolo Bari è il responsabile dello studio di Otorinolaringoiatria; si è laureato in Medicina e Chirurgia presso l’Università degli Studi di Verona nel Marzo 1987.  Nel 1990 si è diplomato specialista in Otorinolaringoiatria sempre presso l’Università di Verona.  Dal ’91 al ’97 ha lavorato presso l’Ospedale civile di Vicenza, reparto di Otorinolaringoiatria.  Dal 1997 al 2010 ha svolto il ruolo di responsabile del servizio ORL presso la Casa di cura Eretenia – Vicenza.
+Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio privato e l’attività chirurgica convenzionata presso la Casa di cura Eretenia, in qualità di consulente.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__media">
+					<img src="./images/check.svg" class="expanded__image">
+				</div>
+				<div class="expanded__content">
+					<h2 class="expanded__title">Area Medica</h2>
+					<p class="expanded__text">Il dott. Paolo Bari offre diversi tipi di terapie come questo o quell'altro, altre cose da scrivere e poi un bel rimando completo per tutte le info all'interno dell'apposita pagina, ti bastera cliccare sul bottone Scopri di pi&#249; qui sotto, verde, bello verde, testo a caso lorem ipsum dolores inct </p>
+					<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__media">
+					<img src="./images/blog.svg" class="expanded__image">
+				</div>
+				<div class="expanded__content">
+					<h2 class="expanded__title">Blog</h2>
+					<p class="expanded__text">Resta aggiornato su tutte le novit&#224; relative al dottore.
+					Articoli, news e tante altre cose da scoprire, testo a caso giusto per riempire un po' lo spazio sottostante relativo a questa sezione</p>
+					<a href="blog.html" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Call To Action -->
+	<div class="cta cta--reverse">
+		<div class="container">
+			<div class="cta__inner">
+				<h2 class="cta__title">Prenota ora una visita</h2>
+				<p class="cta__sub cta__sub--center">Contatta il centro medico pi&#249; comodo alla tua posizione per prendere un appuntamento con il dott. Paolo Bari</p>
+				<a href="contatti.html" class="button button__accent">Contattaci</a>
+			</div>
+		</div>
+	</div>
+	<!-- Footer -->
+	<div class="footer footer--dark">
+		<div class="container">
+			<div class="footer__inner">
+				<a href="index.html" class="footer__textLogo">Dott. Paolo Bari</a>
+				<div class="footer__data">
+					<div class="footer__data__item">
+						<div class="footer__row">
+							Creato da <a href="https://github.com/cescomuch" target="_blank" class="footer__link">Francesco Bari</a>
+						</div>
+						<div class="footer__row">Under <a href="https://opensource.org/licenses/MIT" target="_blank" class="footer__link">MIT License</a>
+						</div>
+					</div>
+					<div class="footer__data__item">
+						<div class="footer__row">Creato per <a href="https://paolobari.it" target="_blank" class="footer__link">Dott. Paolo Bari</a>
+						</div>
+					</div>
+					<div class="footer__data__item">
+					<div class="footer__row">
+						<a href="https://paolobari.it" target="_blank" class="footer__link">Facebook</a>
+					</div>
+					<div class="footer__row">
+						<a href="https://paolobari.it" target="_blank" class="footer__link">Twitter</a>
+					</div>
+					<div class="footer__row">
+						<a href="https://paolobari.it" target="_blank" class="footer__link">Instagram</a>
+					</div>
+					<div class="footer__row">
+						<a href="https://paolobari.it" class="footer__link">Altre cose</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+<script src='js/app.js'></script>
+</body>
+</html>
