--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="index.html" class="navbar__logo">Dott. Paolo Bari</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="#">Home</a></li>
 						<li><a href="contatti.html">Contatti</a></li>
 						<li><a href="dottore.html">Dottore</a></li>
 						<li><a href="areamedica.html">Area Medica</a></li>
@@ -63,29 +63,25 @@
 					<div class="step__media">
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.8190929620982!2d11.398031750445544!3d45.614279331336206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f4ae8d5eedc3f%3A0xb8c5c1a3727c4547!2s36073%20Montepulgo%20VI!5e0!3m2!1sit!2sit!4v1619088481626!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-					<h4>Vicenza</h4>
-					<p class="step__text">Inserire informazioni base di Vicenza tipo indirizzo e numero di telefono</p>
-					<a href="contatti.html" class="button button__accent">Prenota ora</a>
+					<h3>Vicenza</h3>
+					<p>Nome dello Studio medico di Vicenza<br>Telefono: 0444 923876</p>
+					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;">
-            			</iframe> 
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-					<h4>Bassano</h4>
-					<p class="step__text">AInserire informazioni base di Bassano tipo indirizzo e numero di telefono</p>
-					<a href="contatti.html" class="button button__accent">Prenota ora</a>
+					<h3>Bassano</h3>
+					<p>Nome dello Studio medico di Bassano<br>Telefono: 0444 923876</p>
+					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;">
-            			</iframe> 
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-					<h4>Schio</h4>
-					<p class="step__text">Inserire informazioni base di Schio tipo indirizzo e numero di telefono</p>
-					<a href="contatti.html" class="button button__accent">Prenota ora</a>
+					<h3>Schio</h3>
+					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
+					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
 				</div>
 			</div>
 		</div>
