--- a/contatti/vicenza.html
+++ b/contatti/vicenza.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
     <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza" />
     <meta name="author" content="Francesco Bari" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
 </head>
 <body>
@@ -65,6 +65,6 @@
 		</div>
 	</div>
 
-<script src='js/app.js'></script>
+<script src='../js/app.js'></script>
 </body>
 </html>
