--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="index.html" class="navbar__logo">Dott. Paolo Bari</a>
+				<a href="#" class="navbar__logo">Dott. Paolo Bari</a>
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="#">Home</a></li>
