--- a/contatti.html
+++ b/contatti.html
@@ -37,39 +37,44 @@
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
 						<h1 class="hero__title">Contatti</h1>
-						<p class="hero__text">Potete contattare direttamente gli studi medici dove lavoro, qui troverete tutte le informazioni per contattarli.</p>
+						<p class="hero__text">Potete contattare direttamente gli studi medici dove lavoro per prendere appuntamento.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
+		<div class="hero__sub">
+		<span id="scrollToNext" class="scroll">
+			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
+		</span>
+	</div>
 	<!-- Page content -->
 	<div class="steps landing__section">
 		<div class="container">
 			<div class="steps__inner">
 				<div class="step">
 					<div class="step__media">
+						<h2>Vicenza</h2>
+						<p>Nome dello Studio medico di Vicenza</p>
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.8190929620982!2d11.398031750445544!3d45.614279331336206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f4ae8d5eedc3f%3A0xb8c5c1a3727c4547!2s36073%20Montepulgo%20VI!5e0!3m2!1sit!2sit!4v1619088481626!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-        			<h2>Vicenza</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
+					
 					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
 					<div class="step__media">
+						<h2>Bassano</h2>
+						<p>Nome dello Studio medico di Vicenza</p>
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-        			<h2>Bassano</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
 					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
 					<div class="step__media">
+						<h2>Schio</h2>
+						<p>Nome dello Studio medico di Vicenza</p>
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-        			<h2>Schio</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
 					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
 				</div>
 			</div>
