--- a/dottore.html
+++ b/dottore.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Contatti - Dott. Paolo Bari</title>
+	<title>Dottore - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Contatta il dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,contatti,numero, dove lavora, studio" />
+	<meta name="description" content="Anagrafica del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, anagrafica, chi siamo" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
@@ -19,8 +19,8 @@
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#">Contatti</a></li>
-						<li><a href="dottore.html">Dottore</a></li>
+						<li><a href="contatti.html">Contatti</a></li>
+						<li><a href="#">Dottore</a></li>
 						<li><a href="areamedica.html">Area Medica</a></li>
 						<li><a href="blog.html">Blog</a></li>
 					</ul>
@@ -36,8 +36,8 @@
 			<div class="container">
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
-						<h1 class="hero__title">Contatti</h1>
-						<p class="hero__text">Potete contattare direttamente gli studi medici dove lavoro, qui troverete tutte le informazioni per contattarli.</p>
+						<h1 class="hero__title">Dottore</h1>
+						
 					</div>
 				</div>
 			</div>
@@ -45,33 +45,29 @@
 	</div>
 
 	<!-- Page content -->
-	<div class="steps landing__section">
+	<div class="expanded landing__section">
 		<div class="container">
-			<div class="steps__inner">
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.8190929620982!2d11.398031750445544!3d45.614279331336206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f4ae8d5eedc3f%3A0xb8c5c1a3727c4547!2s36073%20Montepulgo%20VI!5e0!3m2!1sit!2sit!4v1619088481626!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-        			<h2>Vicenza</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
-					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
+			<div class="expanded__inner">
+				<div class="expanded__media">
+					<img src="./images/doctor.svg" class="expanded__image">
 				</div>
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-        			<h2>Bassano</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
-					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
+				<div class="expanded__content">
+					<h2 class="expanded__title">Dott. Paolo Bari</h2>
+					<p class="expanded__text">Il Dott. Paolo Bari è il responsabile dello studio di Otorinolaringoiatria; si è laureato in Medicina e Chirurgia presso l’Università degli Studi di Verona nel Marzo 1987.  Nel 1990 si è diplomato specialista in Otorinolaringoiatria sempre presso l’Università di Verona.  Dal ’91 al ’97 ha lavorato presso l’Ospedale civile di Vicenza, reparto di Otorinolaringoiatria.  Dal 1997 al 2010 ha svolto il ruolo di responsabile del servizio ORL presso la Casa di cura Eretenia – Vicenza.
+Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio privato e l’attività chirurgica convenzionata presso la Casa di cura Eretenia, in qualità di consulente.
+Il Dott. Paolo Bari è il responsabile dello studio di Otorinolaringoiatria; si è laureato in Medicina e Chirurgia presso l’Università degli Studi di Verona nel Marzo 1987.  Nel 1990 si è diplomato specialista in Otorinolaringoiatria sempre presso l’Università di Verona.  Dal ’91 al ’97 ha lavorato presso l’Ospedale civile di Vicenza, reparto di Otorinolaringoiatria.  Dal 1997 al 2010 ha svolto il ruolo di responsabile del servizio ORL presso la Casa di cura Eretenia – Vicenza.
+Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio privato e l’attività chirurgica convenzionata presso la Casa di cura Eretenia, in qualità di consulente.</p>
 				</div>
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-        			<h2>Schio</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
-					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
-				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="cta cta--reverse">
+		<div class="container">
+			<div class="cta__inner">
+				<h2 class="cta__title">Prenota ora una visita</h2>
+				<p class="cta__sub cta__sub--center">Contatta il centro medico pi&#249; comodo alla tua posizione per prendere un appuntamento con il dott. Paolo Bari</p>
+				<a href="contatti.html" class="button button__accent">Contattaci</a>
 			</div>
 		</div>
 	</div>
