inizio areamedica e blog

--- a/areamedica.html
+++ b/areamedica.html
@@ -5,7 +5,7 @@
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, prestazioni, visite, specilistiche, visite specialistiche" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
@@ -37,6 +37,7 @@
 				<div class="page__header__content">
 					<div class="page__header__content__inner" id='navConverter'>
 						<h1 class="hero__title">Area Medica</h1>
+						<p class="hero__text">Scopri di pi&#249; sulle terapie offerte dal dott. Paolo Bari</p>
 					</div>
 				</div>
 			</div>
@@ -45,20 +46,88 @@
 
 	
 	<!-- Page content -->
-		<div class="expanded landing__section">
+	<div class="page">
 		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/check.svg" class="expanded__image">
+			<div class="page__inner">
+				<div class="page__menu">
+					<ul class="vMenu">
+						<li><a href="#" class="vMenu--active">Area Medica</a></li>
+						<li><a href="#audiologia">Audiologia</a></li>
+						<li><a href="#rinologia">Rinologia</a></li>
+						<li><a href="#endoscopia">Endoscopia</a></li>
+						<li><a href="#vertigini">Vertigini</a></li>
+					</ul>
 				</div>
-				<div class="expanded__content">
-					<p class="expanded__text">Il dott. Paolo Bari offre diversi tipi di terapie come questo o quell'altro, altre cose da scrivere e poi un bel rimando completo per tutte le info all'interno dell'apposita pagina, ti bastera cliccare sul bottone Scopri di pi&#249; qui sotto, verde, bello verde, testo a caso lorem ipsum dolores inct </p>
-					<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+
+				<!--Main content -->
+				<div class="page__main">
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine" id="audiologia">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Audiologia</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="./areamedica/audiologia.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="./images/b.jpeg" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine__inverse" id="rinologia">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Rinologia</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="./areamedica/rinologia.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="./images/a.jpeg" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine" id="endoscopia">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Endoscopia</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="./areamedica/endoscopia.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="./images/c.png" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine__inverse" id="vertigini">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Vertigini</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="./areamedica/vertigini.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="./images/5.jpeg" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<div class="cta cta--reverse">
 		<div class="container">
 			<div class="cta__inner">
@@ -68,7 +137,6 @@
 			</div>
 		</div>
 	</div>
-
 <script src='js/app.js'></script>
 </body>
 </html>
