--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<div class="hero__content">
 					<div class="hero__content__inner" id='navConverter'>
 						<h1 class="hero__title">Dott. Paolo Bari</h1>
-						<p class="hero__text">Il dott. Paolo Bari &#232; un otorinolaringoiatra della citt&#224; di Vicenza. Qui aggiungiamo un po' di testo giusto giusto per scrivere due righe introduttive. Lorem Ipsum e altre belle cose</p>
+						<p class="hero__text">Il dott. Paolo Bari &#232; un otorinolaringoiatra della citt&#224; di Vicenza. Qui aggiungiamo un po' di testo giusto giusto per scrivere due righe introduttive</p>
 						<a href="contatti.html" class="button button__accent">Dove trovarmi</a>
 						<a href="areamedica.html" class="button hero__button">Scopri di pi&#249;</a>
 					</div>
