--- a/areamedica/rinologia.html
+++ b/areamedica/rinologia.html
@@ -1,51 +1,144 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='it'>
 <head>
+	<title>Area Medica - Dott. Paolo Bari</title>
 	<meta class="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Dashboard | Evie by unDraw</title>
-	<link rel='stylesheet' href='../css/style.css' />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza, area medica, area, medica, terapie, audiologia, rinologia, endoscopia, vertigini prestazioni, visite, specilistiche, visite specialistiche" />
+    <meta name="author" content="Francesco Bari" />
+	<link rel="stylesheet" type="text/css" href="../css/style.css" />
+	<link rel="icon" type="image/gif" href="../images/icon.svg" />
 </head>
 <body>
-	<!-- navbar -->
-	<div class="navbar">
+	<div class="navbar navbar--extended">
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="#" class="navbar__logo">Logo</a>
+				<a href="../index.html" class="navbar__logo">Dott. Paolo Bari</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="#">Option</a></li>
-						<li><a href="#">Option 2</a></li>
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="../contatti.html">Contatti</a></li>
+						<li><a href="../dottore.html">Dottore</a></li>
+						<li><a href="../areamedica.html">Area Medica</a></li>
+						<li><a href="../blog.html">Blog</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
 			</div>
 		</div>
 	</div>
-	<!-- Page content -->
-	<div class="app">
-		<div class="container">
-			<div class="app__inner">
-				<div class="app__menu">
-					<ul class="vMenu">
-						<li><a href="#" class="vMenu--active">Active page</a></li>
-						<li><a href="#">Second page</a></li>
-						<li><a href="#">Third page</a></li>
-						<li><a href="#">Fourth page</a></li>
-						<li><a href="#">Fifth page</a></li>
-					</ul>
-				</div>
-				<div class="app__main">
-					<div class="text-container">
-						<h3 class="app__main__title">This is the main area</h3>
-						<p>Write or do whatever you want here!</p>
+	<!-- Hero unit -->
+	<div class="page__header">
+		<div class="hero__overlay hero__overlay--gradient"></div>
+		<div class="page__header__inner">
+			<div class="container">
+				<div class="page__header__content">
+					<div class="page__header__content__inner" id='navConverter'>
+						<h1 class="hero__title">Area Medica</h1>
+						<p class="hero__text">Scopri di pi&#249; sulle terapie offerte dal dott. Paolo Bari</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-<script src='js/app.js'></script>
+	
+	<!-- Page content -->
+	<div class="page">
+		<div class="container">
+			<div class="page__inner">
+				<div class="page__menu">
+					<ul class="vMenu">
+						<li><a href="#" class="vMenu--active">Area Medica</a></li>
+						<li><a href="#audiologia">Audiologia</a></li>
+						<li><a href="#rinologia">Rinologia</a></li>
+						<li><a href="#endoscopia">Endoscopia</a></li>
+						<li><a href="#vertigini">Vertigini</a></li>
+					</ul>
+				</div>
+
+				<!--Main content -->
+				<div class="page__main">
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine" id="audiologia">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Audiologia</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="../images/b.jpeg" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine__inverse" id="rinologia">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Rinologia</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="../images/a.jpeg" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine" id="endoscopia">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Endoscopia</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="../images/c.png" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+					<!--Terapia -->
+					<div class="expanded landing__section__medicine__inverse" id="vertigini">
+						<div class="container">
+							<div class="expanded__inner">
+								<div class="expanded__content">
+									<h2 class="expanded__title">Vertigini</h2>
+									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+								</div>
+								<div class="expanded__media">
+									<img src="../images/5.jpeg" class="expanded__image">
+								</div>
+							</div>
+						</div>
+					</div>
+					<!--Fine terapia -->
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="cta cta--reverse">
+		<div class="container">
+			<div class="cta__inner">
+				<h2 class="cta__title">Prenota ora una visita</h2>
+				<p class="cta__sub cta__sub--center">Contatta il centro medico pi&#249; comodo alla tua posizione per prendere un appuntamento con il dott. Paolo Bari</p>
+				<a href="../contatti.html" class="button button__accent">Contattaci</a>
+			</div>
+		</div>
+	</div>
+<script src='../js/app.js'></script>
 </body>
 </html>
