--- a/blog.html
+++ b/blog.html
@@ -45,32 +45,58 @@
 	</div>
 
 	<!-- Page content -->
-	<div class="steps landing__section">
+	<div class="expanded landing__section__medicine" id="audiologia">
 		<div class="container">
-			<div class="steps__inner">
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.8190929620982!2d11.398031750445544!3d45.614279331336206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f4ae8d5eedc3f%3A0xb8c5c1a3727c4547!2s36073%20Montepulgo%20VI!5e0!3m2!1sit!2sit!4v1619088481626!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-        			<h2>Vicenza</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
-					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Audiologia</h2>
+						<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+						<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
 				</div>
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-        			<h2>Bassano</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
-					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
+				<div class="expanded__media">
+				<img src="./images/b.jpeg" class="expanded__image">
 				</div>
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-        			<h2>Schio</h2>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
-					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine__inverse" id="audiologia">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Audiologia</h2>
+						<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+						<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+				<div class="expanded__media">
+				<img src="./images/b.jpeg" class="expanded__image">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine" id="audiologia">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Audiologia</h2>
+						<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+						<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+				<div class="expanded__media">
+				<img src="./images/b.jpeg" class="expanded__image">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="expanded landing__section__medicine__inverse" id="audiologia">
+		<div class="container">
+			<div class="expanded__inner">
+				<div class="expanded__content">
+					<h2 class="expanded__title">Audiologia</h2>
+						<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+						<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
+				</div>
+				<div class="expanded__media">
+				<img src="./images/b.jpeg" class="expanded__image">
 				</div>
 			</div>
 		</div>
