--- a/contatti/bassano.html
+++ b/contatti/bassano.html
@@ -47,7 +47,7 @@
 				<div class="expanded__content">
 					<h2 class="expanded__title">Studio medico di Vicenza</h2>
 					<p class="expanded__text">Lo studio medico di Vicenza offre queste terapie e anche altre, e famoso per questo e quello, cikke ciake Lo studio medico di Vicenza offre queste terapie e anche altre, e famoso per questo e quello, cikke ciake Lo studio medico di Vicenza offre queste terapie e anche altre, e famoso per questo e quello, cikke ciake<br><br>Per prenotare chiama il numero:</p>
-					<a class="button button__accent">Telefono: 0444 828282</a>
+					<div class="button button__accent">Telefono: 0444 828282</div>
 				</div>
 
 			</div>
